# tgcrypto

./: README.md  benchmark.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml  wheels.yml
changelogs/: CHANGELOG.md
tgcrypto/: __init__.py  aes256.c  aes256.h  cbc256.c  cbc256.h  ctr256.c  ctr256.h  ige256.c  ige256.h  tgcrypto.c
