[build-system]
requires = ["setuptools>=75.0.0", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tgcrypto"
dynamic = ["version"]
description = "Modern High-Performance Cryptography Extension for Pyrogram"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPLv3+"}
authors = [{name = "ohmyarthur"}]
keywords = ["telegram", "crypto", "cryptography", "aes", "mtproto2", "fast", "optimized"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ohmyarthur/tgcrypto"
Source = "https://github.com/ohmyarthur/tgcrypto"
Issues = "https://github.com/ohmyarthur/tgcrypto/issues"
Changelog = "https://github.com/ohmyarthur/tgcrypto/blob/master/changelogs/CHANGELOG.md"
Original = "https://github.com/pyrogram/tgcrypto"

[tool.setuptools]
packages = ["tgcrypto"]

[tool.setuptools.dynamic]
version = {attr = "tgcrypto._version.__version__"}

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["*-musllinux_i686"]
test-requires = "pytest"
test-command = "pytest {project}/tests/"
build-verbosity = 1

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]